Implementacion de Kruskal